<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/GeneralLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:id="@+id/NameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/NameImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/NameInputForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/negro_letras"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/NameTextForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/form_name"
                        android:textColor="@color/negro_letras" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/DescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/DescriptionImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/DescriptionInputForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/negro_letras"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/DescriptionTextForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/form_description"
                        android:textColor="@color/negro_letras"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/AuthorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/AuthorImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_author" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/AuthorInputForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/negro_letras"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/AuthorTextForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/form_author"
                        android:textColor="@color/negro_letras"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LikeDateLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/LikeImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_like" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LikeInputForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/negro_letras"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LikeTextForm"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/form_like"
                        android:textColor="@color/negro_letras"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/DateImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_calendar" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/DateInputForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/negro_letras"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/DateTextForm"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/form_date"
                        android:textColor="@color/negro_letras"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/FavCategoryLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/FavImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_fav" />

                <Switch
                    android:id="@+id/FavSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:theme="@style/ToggleSwitchTheme" />

                <ImageView
                    android:id="@+id/CategoryImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_category" />

                <Spinner
                    android:id="@+id/CategorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ImageLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/CleanImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/form_button_clean_image"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/imageMemeForm"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:background="@drawable/default_image" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:gravity="center">

                <Button
                    android:id="@+id/DeleteFormButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25sp"
                    android:layout_weight="0"
                    android:text="@string/form_button_delete"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/SaveFormButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_weight="0"
                    android:backgroundTint="@color/azul_oscuro"
                    android:text="@string/form_button_save"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>