<resources>

    <string name="app_name">RealMeme</string>
    <string name="app_version">Version 1.0</string>

    <!-- Strings my data -->
    <string name="my_name" translatable="false">Francisco Garcia Cordoba</string>
    <string name="my_email" translatable="false">ciscu6@gmail.com</string>


    <!-- Strings used in Title for Activity -->
    <string name="title_activity_form">Form</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_help">Help</string>


    <!-- Strings used in TextInputs -->
    <string name="form_name">Meme name...</string>
    <string name="form_description">Meme description...</string>
    <string name="form_author">Author...</string>
    <string name="form_like">Mark...</string>
    <string name="form_date">Date</string>


    <!-- Strings used in Buttons -->
    <string name="form_button_clean_image">Clean Image</string>
    <string name="form_button_delete">Delete</string>
    <string name="form_button_save">Save</string>
    <string name="search_button_search">Search</string>


    <!-- Strings used in menu -->
    <string name="action_settings">Configuration</string>
    <string name="action_search">Search</string>
    <string name="action_order">Sort</string>
    <string name="action_help">Help</string>
    <string name="action_about">About us</string>


    <!-- Errors -->
    <string name="error_name">Enter a name of more than 5 characters without numbers</string>
    <string name="error_description">Description must be between 10 and 50 characters</string>
    <string name="error_author">Author name must be greater than 5 characters</string>
    <string name="error_like">Mark has to be between 0 and 10</string>
    <string name="error_date">Date format is DD / MM / YYYY or DD / MM / YYY</string>


    <!-- Alert Dialog -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_option">Add new category</string>
    <string name="your_option">Write a category</string>
    <string name="toast_nothing">Nothing has been entered</string>
    <string name="delete_meme_dialog_tittle">Delete Meme</string>
    <string name="delete_meme_dialog_message">Are you sure you want to delete the meme, this cannot be undone</string>


    <!-- Spinner -->
    <string name="spinner_info">Select category...</string>
    <string name="spinner_add">Add category...</string>
    <string name="spinner_data_01" translatable="false">Anime</string>
    <string name="spinner_data_02">Animals</string>
    <string name="spinner_data_03">Films</string>
    <string name="spinner_data_04" translatable="false">Comics</string>


    <!-- Toast -->
    <string name="memeTwoDotsToast">Meme:</string>
    <string name="deleteSuccessToast">, remove successful</string>
    <string name="deleteDangerToast">Error removing the item</string>
    <string name="filedsMissing">Please fill all fields</string>
    <string name="memeNotSave">Meme has not been saved successfully</string>
    <string name="deleteMeme">Meme deleted successfully</string>
    <string name="internet">You dont have network connection</string>


    <!-- Permission -->
    <string name="write_permission_granted">You have writing permission</string>
    <string name="write_permission_denied">You do not have writing permission</string>


    <string name="choose_picture">Choose an image</string>
    <string name="find_object">objects found</string>


</resources>